2007-12-29  Albert Chu <chu11@llnl.gov>

	* pef-config/src/Makefile.am: Remove linking to libsdr.la.
	
2007-12-29  Albert Chu <chu11@llnl.gov>

	Merge from sdr_lib_rearch_branch, SDR library rearchitecture.

	* ipmimonitoring/src/libipmimonitoring/: Remove struct
	ipmi_monitoring_communication which is no longer needed.  Adjust
	for direct use of ipmi_ctx_t as needed.

	* ipmimonitoring/src/libipmisdrcache/: Support ipmi error code.

	* ipmimonitoring/src/libipmisdrcache/ipmi_sdr_cache.h: Add
	comments on API.

	* ipmimonitoring/src/libipmisdrcache/ipmi_sdr_cache_defs.h,
	ipmimonitoring/src/libipmisdrcache/ipmi_sdr_cache_common.h,
	ipmimonitoring/src/libipmisdrcache/ipmi_sdr_cache_common.c,
	ipmimonitoring/src/libipmisdrcache/ipmi_sdr_cache_create.c,
	ipmimonitoring/src/libipmisdrcache/ipmi_sdr_cache_delete.c,
	ipmimonitoring/src/libipmisdrcache/ipmi_sdr_cache_read.c: New
	files.  Split off code into appropriate files.

	* libfreeipmi/src/api/ipmi-sensor-cmds-api.c,
	libfreeipmi/include/freeipmi/api/ipmi-sensor-cmds-api.h
	(ipmi_cmd_get_sensor_reading): New function.

	* ipmimonitoring/src/libipmimonitoring/,
	ipmimonitoring/src/libipmisdrcache/: Re-work APIs to move all sdr
	cache creation into libipmisdrcache and out of ipmimonitoring.

	* ipmimonitoring/src/ipmimonitoring/: Make options in
	ipmimonitoring more consistent to ipmi-sensors.

	* ipmimonitoring/src/libipmisdrcache/: Move into
	libfreeipmi/include/freeipmi/sdr-cache/ and
	libfreeipmi/src/sdr-cache/.

	* libfreeipmi/src/libcommon/: Add sdr-cache equivalent error
	wrappers.

	* libfreeipmi/src/sdr-cache/: Use wrappers appropriately.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring.c
	ipmimonitoring/include/freeipmi/sdr-cache/ipmi_monitoring.h: New
	function.

	* ipmimonitoring/src/libipmimonitoring/ipmi_monitoring_sdr_cache.c
	(_ipmi_monitoring_sdr_cache_filename): Handle user specified
	filename formats.

	* common/src/tool-sdr-cache-common.h,
	common/src/tool-sdr-cache-common.c,