@@ -38,6 +38,8 @@ int8_t ipmi_dump_rmcp_packet (int fd, char *prefix, char *hdr, uint8_t *pkt, uin
 
 int32_t ipmi_dump_rmcpplus_packet (int fd, char *prefix, char *hdr, uint8_t authentication_algorithm, uint8_t integrity_algorithm, uint8_t confidentiality_algorithm, uint8_t *integrity_key, uint32_t integrity_key_len, uint8_t *confidentiality_key, uint32_t confidentiality_key_len, uint8_t *pkt, uint32_t pkt_len, fiid_template_t tmpl_lan_msg_hdr, fiid_template_t tmpl_cmd);
 
+int32_t ipmi_dump_sdr_record (int fd, char *prefix, uint8_t *sdr_record, uint32_t sdr_record_len);
+
 #ifdef __cplusplus
 }
 #endif
